--- a/app/src/main/res/layout/fragment_chooser.xml
+++ b/app/src/main/res/layout/fragment_chooser.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
-    android:id="@+id/activity_chooser"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="edu.depaul.jmorton.boschhack.boschhackathon.activities.ChooserActivity">
 
     <LinearLayout
+        android:id="@+id/fragment_chooser"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingTop="@dimen/activity_vertical_margin"
@@ -36,7 +36,7 @@
                 android:layout_height="match_parent"
                 android:background="?android:attr/selectableItemBackground"
                 android:scaleType="fitCenter"
-                android:src="@mipmap/image_xdk"
+                android:src="@mipmap/image_xdk2"
                 />
         </LinearLayout>
 
