--- a/app/src/main/res/layout/fragment_xdkmain.xml
+++ b/app/src/main/res/layout/fragment_xdkmain.xml
@@ -1,13 +1,88 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context="edu.depaul.jmorton.boschhack.boschhackathon.fragments.XDKMainFragment">
+<?xml version="1.0" encoding="utf-8"?>
+<layout
+    android:id="@+id/fragment_xdkmain"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="edu.depaul.jmorton.boschhack.boschhackathon.activities.ChooserActivity">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment"/>
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:orientation="vertical">
 
-</FrameLayout>
+        <LinearLayout
+            android:id="@+id/rolloverLinearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_weight="1"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:paddingBottom="@dimen/activity_vertical_margin">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Rollover stats"
+                android:textAppearance="@android:style/TextAppearance.Material.Large"/>
+
+            <TextView
+                android:id="@+id/rollover_x_axisTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                tools:text="X: 175"
+                android:textAppearance="@android:style/TextAppearance.Material.Large"/>
+
+            <TextView
+                android:id="@+id/rollover_y_axisTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                tools:text="Y: 175"
+                android:textAppearance="@android:style/TextAppearance.Material.Large"/>
+
+            <TextView
+                android:id="@+id/rollover_z_axisTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                tools:text="Z: 175"
+                android:textAppearance="@android:style/TextAppearance.Material.Large"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/fireLinearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/xdkLinearLayout"
+            android:orientation="vertical"
+            android:layout_weight="1"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:paddingBottom="@dimen/activity_vertical_margin">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Start a car fire"
+                android:paddingBottom="16dp"
+                android:textAppearance="@android:style/TextAppearance.Material.Large"/>
+
+            <ImageButton
+                android:id="@+id/fireButton"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="?android:attr/selectableItemBackground"
+                android:scaleType="fitCenter"
+                android:src="@mipmap/image_fire"
+                />
+        </LinearLayout>
+
+    </LinearLayout>
+
+</layout>
